2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* INSTALL: Document linguas.sh.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove POTFILES.in and regenerate it in autogen.sh.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	Move --directory/--override-directorry to grub-install_header and unify.

2013-04-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/morse.c: Macroify dih and dah.

2013-04-27  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>

	* include/grub/macho.h: Set GRUB_MACHO_FAT_EFI_MAGIC as unsigned.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ns8250.c: Systematically probe ports by writing
	to SR before using them.

2013-04-27  Paulo Flabiano Smorigo <pfsmorigo@br.ibm.com>

	* util/ieee1275/ofpath.c (of_path_of_scsi): Fix path output for sas
	disks.
	(check_sas): Get sas_adress info.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ahci.c (grub_ahci_pciinit): Fix handling of empty
	ports.

2013-04-27  Leon Drugi <eyak>

	* grub-core/loader/multiboot_mbi2.c (grub_multiboot_load): Fix cast in
	BSS clearing.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Core compression test.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement grub_machine_get_bootlocation for ARC.

2013-04-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Improve AHCI detection and command issuing.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix pseries test.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Make 'make check' work on emu.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace libcurses with our own vt100 handling for the ease of testing
	and decreasing prerequisites.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def: Fix grub-emu and grub-emu-lite sources.

2013-04-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (exec_pipe): Put proper #if's so that its users don't